--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "sahay",
+  "homepage": "https://ilovetalk.github.io/sahay/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react-router-dom": "^7.9.1",
     "@google/genai": "^1.19.0",
+    "gh-pages": "^6.3.0",
+    "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react": "^19.1.1"
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
